Fix WooCommerce added-to-cart notice alignment

--- a/src/assets/styles/module/woocommerce/_woocommerce.scss
+++ b/src/assets/styles/module/woocommerce/_woocommerce.scss
@@ -345,6 +345,7 @@ $wc_font: $body-font;
     }
 
     & {
+        display: block;
         font-family: $wc_font;
     }
 }
